# hello-huggingface

./: README.md  pyproject.toml
1_transformer_models/: pipeline.ipynb
2_using_hf_transformers/: behind_the_pipeline.ipynb  bert-model.ipynb
3_finetuning_model/: custom-finetuning.ipynb  tldr-dataset.ipynb  trainer-fintuning.ipynb
